# kalman-filter

./: CMakeLists.txt  FRAME.md  README.md  TODO.md  conanfile.txt  makefile
lib/filter/: CMakeLists.txt
lib/filter/src/: integrator.cpp  integrator.hpp
lib/imu/: CMakeLists.txt
lib/imu/src/: command.hpp  connection.cpp  connection.hpp  driver.cpp  driver.hpp  driver.inl  interface.cpp  interface.hpp  response.hpp  response.inl
lib/serial/src/: connection.cpp  connection.hpp  message.hpp
scripts/: main.py
tools/imuping/: CMakeLists.txt
tools/imuping/src/: main.cpp
tools/logger/: CMakeLists.txt
tools/logger/src/: main.cpp
tools/ping/: CMakeLists.txt
tools/ping/src/: main.cpp
tools/scripts/: main.py
tools/stream/: CMakeLists.txt
tools/stream/src/: main.cpp
tools/tracker/: CMakeLists.txt
tools/tracker/src/: main.cpp
